allTypesBut fails, please fix